--- a/style.css
+++ b/style.css
@@ -69,3 +69,16 @@ font-weight: 600;
 color: #f43543;
 cursor: pointer;
 }
+
+@media only screen and (max-width: 768px){
+    .wrapper{
+        width: 350px;
+
+position: absolute;
+transform: translate (-50%, -50%);
+top: 50%;
+left: 50%;
+margin-top: -15em ;
+margin-left: -11em;
+}
+}
